--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,15 +6,47 @@
 @import "header";
 @import "nav";
 @import "actual";
+@import "lecture";
+@import "gallery";
 
-.body__main {
-  max-width: 1570px;
-  margin: 0 auto;
-  padding: 0 20px;
+.body {
+  &__header {
+    margin: 0 auto 200px;
+    padding: 0 20px;
+    max-width: 1570px;
+
+    @media (max-width: 928px) {
+      margin-bottom: 90px;
+    }
+
+    @media (max-width: 480px) {
+      margin-bottom: 70px;
+    }
+  }
+
+  &__main {
+    margin: 0 auto;
+    padding: 0 20px;
+    max-width: 1570px;
+  }
+
+  &__footer {
+    margin: 0 auto;
+    padding: 0 20px;
+    max-width: 1570px;
+  }
 }
 
 .main {
   &__actual {
     margin: 0 auto;
+  }
+
+  &__lecture {
+    margin: 0 auto 316px;
+  }
+
+  &__gallery {
+    margin: 0 auto 200px;
   }
 }
