--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,21 +1,34 @@
 .nav {
-  position: relative;
+  display: flex;
+  justify-content: space-between;
 
   &__logo {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
+    @include logo;
+    order: 2;
+  }
 
-    @include mainText;
-    font-weight: bold;
-    font-size: 36px;
-    line-height: 100%;
-    text-transform: uppercase;
-    color: $dark;
+  &__search {
+    visibility: hidden;
+    order: 3;
+    align-self: center;
+    transition-duration: $transDuration;
+  }
+
+  &__searc {
+    width: 50px;
+    height: 72px;
   }
 
   &__list {
     display: none;
+    max-width: 1470px;
+
+    border-top-right-radius: 40%;
+    border-bottom-right-radius: 50%;
+
+    @media (max-width: 1440px) {
+      border-top-right-radius: 0;
+    }
   }
 
   &__link {
@@ -24,31 +37,29 @@
 
     @include mainText;
     font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 100%;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 72px;
     color: $dark;
 
-  }
-
-  &__search {
-    display: none;
+    text-align: center;
   }
 
   &__toggler {
     display: none;
-    position: absolute;
   }
 
   &__toggler-label {
+    order: 1;
+
     display: block;
     position: relative;
-    // margin: auto 0;
-    padding: 15px ;
-    width: 20px;
+    margin: auto 0;
+    padding: 15px;
+    width: 50px;
+    height: 13px + 30px;
 
     cursor: pointer;
-    z-index: 1;
   }
 
   &__span,
@@ -88,20 +99,21 @@
     transform: rotate(90deg);
   }
 
-  &__toggler:checked ~ .nav__list {
-    display: flex;
-    justify-content: center;
+  &__toggler:checked {
 
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 1;
+    & ~ .nav__list {
+      display: flex;
+      flex-wrap: wrap;
+      z-index: 1;
 
-    height: max-content;
-    width: 100%;
+      list-style: none;
+      transition-duration: $transDuration;
 
-    list-style: none;
-    // background-color: #fff;
-    transition-duration: $transDuration;
+      position: absolute;
+      top: 0;
+      left: 100px;
+      background-color: #fff;
+      order: 2;
+    }
   }
 }
