--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -13,6 +13,14 @@
   font-family: "IBM Plex Sans", sans-serif;
 }
 
+@mixin logo {
+  @include mainText;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 100%;
+  text-transform: uppercase;
+}
+
 @mixin actual-media-img {
   @media (max-width: 1440px) {
     width: 670px;
@@ -28,5 +36,52 @@
   @media (max-width: 480px) {
     width: 280px;
     height: 210px;
+  }
+}
+
+@mixin event {
+  @include secondaryText;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 100%;
+  text-transform: uppercase;
+  color: #687480;
+
+  @media (max-width: 480px) {
+    font-size: 16px;
+  }
+}
+
+@mixin date {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 100%;
+  color: $mainGreen;
+
+  @media (max-width: 480px) {
+    font-size: 16px;
+  }
+}
+
+@mixin articles {
+  @include mainText;
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 100%;
+
+  @media (max-width: 480px) {
+    font-size: 28px;
+  }
+}
+
+@mixin mainArticles {
+  @include mainText;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 100%;
+
+  @media (max-width: 480px) {
+    font-size: 36px;
+    text-align: center;
   }
 }
