burger menu was created

--- a/src/styles/header/nav.scss
+++ b/src/styles/header/nav.scss
@@ -1,3 +1,45 @@
-.nav {
-  position: static;
+.header {
+  &__menu {
+    position: absolute;
+    @media screen and (min-width: 768px) {
+      height: auto;
+      top: 0;
+    }
+    display: none;
+    &--has-popup {
+      display: block;
+      position: absolute;
+    }
+  }
+
+  &__menu-list {
+    list-style: none;
+    @media screen and (min-width: 768px) {
+      height: 114px + 135px + 135px;
+    }
+
+    @media screen and (min-width: 768px) {
+      height: 235px + 152px + 268px;
+    }
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: rgba(#fff, 0.85);
+  }
+
+  &__menu-link {
+    color: #000;
+    font-size: 4.37vw;
+
+    @media screen and (min-width: 768px) {
+      font-size: 2.37vw;
+    }
+    @media screen and (min-width: 1920px) {
+      font-size: 45px;
+    }
+
+  }
 }
