--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,11 +2,12 @@
 @import "fonts.scss";
 @import "typography.scss";
 @import "normolize.scss";
+
 @import "./header/header.scss";
 @import "./header/nav.scss";
 @import "./header/form.scss";
 @import "./header/logo.scss";
-@import "./header/switch.scss";
+@import "./header/toggler.scss";
 
 @import "main.scss";
 
@@ -22,5 +23,5 @@
 @import "./footer/footer.scss";
 
 body {
-  background: $c-gray;
+  background: #fff;
 }
