--- a/src/styles/subscription/subscription.scss
+++ b/src/styles/subscription/subscription.scss
@@ -4,7 +4,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;// 120.6vw;
-  //width: 100vw;
+  width: 100vw;
   color: #fff;
 
   display: flex;
@@ -145,7 +145,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     height: 550px;// 120.6vw;
-    //width: 100vw;
+    width: 100vw;
     color: #fff;
 
     display: flex;
@@ -217,7 +217,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     height: 650px;// 120.6vw;
-    //width: 100vw;
+    width: 100vw;
     color: #fff;
 
     display: flex;
