gallary with slider

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,8 @@
 @import "events";
 @import "description";
 @import "lecture";
+@import "gallary";
+@import "slider";
 
 * {
   box-sizing: border-box;
