--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -7,6 +7,7 @@ $c-greyText: #4e4e4e;
 $c-lightGreyText: #687480;
 $c-textDate: #1a5a4c;
 $c-squareEvets: #f14a27;
+$c-noActive: #e0e0e0;
 
 $maxPageWidth: 1920px;
 $maxWitdhPageCont: 1570px;
@@ -20,3 +21,7 @@ $squareEvetsLine-height: 36px;
 $squareEvetsLine-heightMob: 28px;
 $lectureCardWidth: 570px;
 $lectureCardWidthMob: 278px;
+$galaryWidthTab: 340px;
+$galaryGapTab: 20px;
+$galaryWidthMob: 280px;
+$galaryGapMob: 16px;
