--- a/src/styles/footer/contacts.scss
+++ b/src/styles/footer/contacts.scss
@@ -1,4 +1,5 @@
 .contacts {
+  margin-left: 150px;
   &__title {
     font-size: 14px;
     font-weight: 400;
@@ -8,6 +9,12 @@
   &__address {
     font-size: 14px;
     line-height: 21px;
+  }
+}
+
+@include onMobileMax {
+  .contacts {
+    margin-left: 0;
   }
 }
 
