--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -6,7 +6,15 @@
 
   margin-left: 55px;
   &__nav {
-    display: none;
+    position: absolute;
+    height: 500px;
+    transform: translate(-400px);
+    top: 40px;
+    z-index: 3;
+
+    font-size: 0;
+    overflow: hidden;
+    transition: 1s;
   }
 }
 
@@ -20,5 +28,11 @@
   .header {
     height: 350px;
     margin-left: 0;
+  }
+}
+
+@include onMobileMax {
+  .header__nav {
+    left: 10px;
   }
 }
