--- a/src/styles/header/left.scss
+++ b/src/styles/header/left.scss
@@ -34,6 +34,7 @@
       font-weight: 700;
       color: #000;
       line-height: 100%;
+      transition: 0.5s;
       &:hover {
         -webkit-text-stroke: 2px #000;
         color: transparent;
