--- a/src/styles/header/right.scss
+++ b/src/styles/header/right.scss
@@ -22,6 +22,7 @@
     font-size: 72px;
     -webkit-text-stroke: 2px #000;
     color: transparent;
+    transition: 0.5s;
 
     &:hover {
       color: black;
