--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,8 @@
 @import "header/header";
 @import "header/left";
 @import "header/right";
+@import "header/burger";
+@import "header/nav";
 
 @import "continner";
 
@@ -26,6 +28,7 @@
 
 html {
   font-family: "IBM Plex Sans", sans-serif;
+  scroll-behavior: smooth;
 }
 
 .name:hover .name__picture__rectangle {
