add gallery block

--- a/src/styles/_lection.scss
+++ b/src/styles/_lection.scss
@@ -28,7 +28,7 @@
   &__content {
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
     padding: 25px 20px;
-    margin: 0 auto;
+    margin: 0 21px;
     transform: translate(0, -75px);
     background-color: #fff;
     margin-bottom: 100px;
@@ -37,6 +37,7 @@
       width: 570px;
       height: 204px;
       padding: 45px 100px 50px;
+      margin: 0 auto;
     }
   }
 
