--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,8 @@
 @import "events";
 @import "exhibition";
 @import "lection";
+@import "gallery";
+@import "slider";
 
 body {
   font-family: "IBM Plex Sans", sans-serif;
@@ -19,7 +21,10 @@ body {
   }
 
   @media (min-width: 1280px) {
-    min-width: 1170px;
+    width: 1170px;
     margin: 0 auto;
+  }
+  @media (min-width: 1920px) {
+    width: 1570px;
   }
 }
