--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -58,6 +58,9 @@
     text-transform: uppercase;
   }
 
+  &__visit {
+    display: none;
+  }
 
   &__content {
     position: relative;
@@ -130,7 +133,5 @@
 
   &__title {
     opacity: 0.7;
-
   }
-
 }
