--- a/src/styles/_blocks.scss
+++ b/src/styles/_blocks.scss
@@ -11,4 +11,4 @@
 @import "blocks/promo";
 @import "blocks/gallery";
 @import "blocks/subscribe";
-//@import "blocks/main";
+@import "blocks/footer";
