--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -36,3 +36,34 @@
     @include hover(border-color, $c-secondary-text);
   }
 }
+
+.nav_footer {
+  padding: 40px 0 70px;
+  border-bottom: none;
+  .nav {
+    &__list {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 0 22px;
+      width: 100%;
+      @include media(dt) {
+        gap: 0 60px;
+      }
+    }
+
+    &__list-item {
+      @extend %footer-text;
+    }
+  }
+
+  @include media(dt) {
+    padding: 0;
+    height: fit-content;
+
+    .nav {
+      &__list-item {
+        margin-bottom: 20px;
+      }
+    }
+  }
+}
