--- a/src/styles/blocks/_post.scss
+++ b/src/styles/blocks/_post.scss
@@ -3,11 +3,23 @@
     margin-bottom: 20px;
     width: 100%;
     height: 65vw;
+    @include hover(transform, scale(1.1));
   }
 
   &__heading {
     margin-bottom: 10px;
     @extend %h3;
+    position: relative;
+    width: fit-content;
+    &::after {
+      content: "";
+      position: absolute;
+      right: -20px;
+      top: 50%;
+      transform: translateY(-20%);
+      @include size(10px);
+      background-color: $c-accent-second;
+    }
   }
 
   &__desc {
