--- a/src/styles/blocks/_subscribe.scss
+++ b/src/styles/blocks/_subscribe.scss
@@ -58,10 +58,14 @@
     }
   }
 
-  @include media(tablet) {
+  @include media(dt) {
     height: 550px;
     &__form {
       gap: 30px;
+    }
+
+    &__input {
+      font-size: 16px;
     }
   }
 }
