--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -87,3 +87,11 @@
     font-size: 14px;
   }
 }
+
+%footer-text {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 150%;
+  color: $c-dark-text;
+}
