--- a/src/styles/blocks/_promo.scss
+++ b/src/styles/blocks/_promo.scss
@@ -16,6 +16,8 @@
     transform: translateX(-50%);
     background-color: #fff;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+
+    @include hover(transform, translate(-50%, -25px));
   }
 
   &__heading {
