--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -2,7 +2,19 @@
   height: 655px;
   position: relative;
 
+  @media (max-width: 1024px) {
+    height: 555px;
+  }
+
   @media (max-width: 928px) {
+    height: 384px;
+  }
+
+  @media (max-width: 765px) {
+    height: 600px;
+  }
+
+  @media (max-width: 480px) {
     height: 500px;
   }
 
@@ -10,25 +22,24 @@
     background-image: url(../images/headerImg.png);
     background-size: cover;
 
-    width: 1245px;
+    width: 1070px;
     height: 655px;
     position: absolute;
-    right: -175px;
+    right: 0;
     top: 0;
     z-index: -1;
 
     @media (max-width: 1440px) {
-      right: -100px;
-      width: 1045px;
+      width: 805px;
     }
 
     @media (max-width: 1280px) {
-      right: -60px;
       width: 725px;
     }
 
     @media (max-width: 1024px) {
       width: 655px;
+      height: 555px;
     }
 
     @media (max-width: 928px) {
@@ -58,7 +69,7 @@
     transform: rotate(-90deg);
     transform-origin: left top;
 
-    @media (max-width: 1024px) {
+    @media (max-width: 1070px) {
       display: none;
     }
 
@@ -91,19 +102,23 @@
     transform: translateY(-30%);
 
     @media (max-width: 1440px) {
-      right: 805px;
+      right: 665px;
     }
 
     @media (max-width: 1280px) {
-      right: 525px;
+      right: 585px;
     }
 
     @media (max-width: 1024px) {
-      right: 455px;
+      right: 515px;
+    }
+
+    @media (max-width: 970px) {
+      right: 567px;
     }
 
     @media (max-width: 928px) {
-      right: 305px;
+      right: 417px;
     }
 
     @media (max-width: 765px) {
@@ -115,19 +130,22 @@
     }
 
     @media (max-width: 480px) {
-      top: 320px;
+      top: 315px;
     }
   }
 
   &__article {
     margin-bottom: 80px;
 
+    @media (max-width: 970px) {
+      font-size: 45px;
+    }
+
     @media (max-width: 928px) {
       margin-bottom: 40px;
     }
 
     @media (max-width: 765px) {
-      font-size: 45px;
       text-align: center;
     }
   }
@@ -145,6 +163,10 @@
     display: flex;
     width: 150px + 70px;
     border: 1px solid $mainGreen;
+
+    @media (max-width: 970px) {
+      width: 200px;
+    }
 
     @media (max-width: 765px) {
       width: 230px + 50px;
@@ -165,6 +187,12 @@
       text-align: center;
       line-height: 70px;
 
+      @media (max-width: 970px) {
+        height: 50px;
+        width: 150px;
+        line-height: 50px;
+      }
+
       @media (max-width: 765px) {
         height: 50px;
         width: 230px;
@@ -177,6 +205,11 @@
       height: 70px;
       background-color: $mainGreen;
       display: flex;
+
+      @media (max-width: 970px) {
+        width: 50px;
+        height: 50px;
+      }
 
       @media (max-width: 765px) {
         width: 50px;
