--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,14 +6,15 @@
 @import "header";
 @import "nav";
 @import "actual";
-@import "lecture";
+// @import "lecture";
 @import "gallery";
 
 .body {
+
   &__header {
-    margin: 0 auto 200px;
-    padding: 0 20px;
-    max-width: 1570px;
+    margin: 0 auto $marginBetween;
+    padding: 0 $pagePadd;
+    max-width: $pageWidth + $pagePadd *2;
 
     @media (max-width: 928px) {
       margin-bottom: 90px;
@@ -26,27 +27,27 @@
 
   &__main {
     margin: 0 auto;
-    padding: 0 20px;
-    max-width: 1570px;
+    padding: 0 $pagePadd;
+    max-width: $pageWidth + $pagePadd *2;
   }
 
   &__footer {
     margin: 0 auto;
-    padding: 0 20px;
-    max-width: 1570px;
+    padding: 0 $pagePadd;
+    max-width: $pageWidth + $pagePadd *2;
   }
 }
 
 .main {
   &__actual {
-    margin: 0 auto;
+    // margin: 0 auto;
   }
 
   &__lecture {
-    margin: 0 auto 316px;
+    // margin: 0 auto 316px;
   }
 
   &__gallery {
-    margin: 0 auto 200px;
+    // margin: 0 auto 200px;
   }
 }
