--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -54,7 +54,7 @@
 
     display: block;
     position: relative;
-    margin: auto 0;
+    margin: auto 0 auto -15px;
     padding: 15px;
     width: 50px;
     height: 13px + 30px;
@@ -114,6 +114,10 @@
       left: 100px;
       background-color: #fff;
       order: 2;
+
+      @media (max-width: 768px) {
+        left: 50px;
+      }
     }
   }
 }
