--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -24,40 +24,9 @@
     align-items: center;
   }
 
-  &__toggler {
-    position: relative;
-
-    width: 18px;
-    height: 2px;
-
-    background-color: $color-black-text;
-
-    &::before {
-      content: "";
-      position: absolute;
-      bottom: 4px;
-
-      width: 18px;
-      height: 2px;
-
-      background-color: $color-black-text;
-    }
-
-    &::after {
-      content: "";
-      position: absolute;
-      top: 4px;
-
-      width: 18px;
-      height: 2px;
-
-      background-color: $color-black-text;
-    }
+  &__nav--open {
+    display: block;
   }
-
-  // &__menu {
-
-  // }
 
   // &__logo-link {
   // }
