--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -33,6 +33,11 @@
     margin-bottom: 30px;
   }
 
+  @media (max-width: 700px) {
+    width: 460px;
+    height: 390px;
+  }
+
   @media (max-width: 480px) {
     width: 280px;
     height: 210px;
