Added animstion in header

--- a/src/styles/header/left.scss
+++ b/src/styles/header/left.scss
@@ -1,3 +1,5 @@
+@import "../utils/animation/animation";
+
 .left {
   position: relative;
   display: flex;
@@ -11,12 +13,14 @@
     position: absolute;
     top: 550px;
     left: 0;
-    width: 1px;
+    width: 10px;
     &__paragraph {
       transform: rotate(-90deg);
     }
 
     &__line {
+      position: absolute;
+      left: 5px;
       width: 1px;
       height: 70px;
       background-color: #1a5a4c;
@@ -56,6 +60,15 @@
     color: #0f0e08;
     cursor: pointer;
     padding-left: 40px;
+    transition: 0.5s;
+
+    &:hover &__link {
+      color: #fff;
+    }
+
+    &:hover {
+      background-color: #1a5a4c;
+    }
 
     &__click {
       height: 70px;
