--- a/src/styles/section/gallery/gallery.scss
+++ b/src/styles/section/gallery/gallery.scss
@@ -26,6 +26,11 @@
   object-fit: contain;
   transition: 1s;
 
+  &:hover {
+    transform: scale(1.1);
+    box-shadow: 0 6px 23px black;
+  }
+
   &:last-child {
     margin-right: 0;
   }
@@ -37,17 +42,17 @@
   object-fit: contain;
   transition: 1s;
 
+  &:hover {
+    transform: scale(1.1);
+    box-shadow: 0 6px 23px black;
+  }
+
   &:last-child {
     margin-right: 0;
   }
 }
 
 @include onTV {
-  .important__img:hover {
-    transform: scale(1.1);
-    box-shadow: 0 6px 23px black;
-  }
-
   .important__img--second {
     margin-right: 0;
   }
@@ -58,11 +63,6 @@
 
   .secondary__img:last-child {
     display: none;
-  }
-
-  .secondary__img:hover {
-    transform: scale(1.1);
-    box-shadow: 0 6px 23px black;
   }
 }
 
