--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -92,3 +92,11 @@ html {
   animation-direction: alternate;
   animation-timing-function: linear;
 }
+
+.left__text:hover {
+  animation-name: down-up;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
