--- a/src/styles/utils/animation/animation.scss
+++ b/src/styles/utils/animation/animation.scss
@@ -119,3 +119,13 @@
     transform: rotate(-360deg);
   }
 }
+
+@keyframes down-up {
+  0% {
+    transform: translateY(50px);
+  }
+
+  100% {
+    transform: translateY(-50px);
+  }
+}
