--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -16,6 +16,10 @@
     @media (max-width: $min-desktop-width) {
       margin-bottom: 90px;
     }
+
+    @media (max-width: $min-tablet-width) {
+      margin-bottom: 70px;
+    }
   }
 
   &__gallery {
@@ -23,6 +27,10 @@
 
     @media (max-width: $min-desktop-width) {
       margin-bottom: 130px;
+    }
+
+    @media (max-width: $min-tablet-width) {
+      margin-bottom: 100px;
     }
   }
 
