--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -17,9 +17,12 @@
 
     @media (max-width: $min-tablet-width) {
       width: 100%;
+      height: 210px;
 
       margin-bottom: 19px;
     }
+
+
   }
 
   &__info {
@@ -88,6 +91,6 @@
 
     background-position: center;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
   }
 }
