--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -2,6 +2,10 @@
 
   &__title {
     margin-bottom: 60px;
+
+    @media (max-width: $min-tablet-width) {
+      margin-bottom: 40px;
+    }
   }
 
   &__event {
