--- a/src/styles/lecture.scss
+++ b/src/styles/lecture.scss
@@ -6,6 +6,10 @@
     background-image: url($img-lecture);
     background-size: cover;
     background-position: bottom;
+
+    @media (max-width: $min-tablet-width) {
+      height: 210px;
+    }
   }
 
   &__info {
