--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -73,6 +73,10 @@
 
   &__schedule {
     width: 50%;
+
+    @media (max-width: $min-tablet-width) {
+      margin-right: 22px;
+    }
   }
 
   &__title {
