lecture block done

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,7 @@
 @import "header";
 @import "nav";
 @import "actual";
-// @import "lecture";
+@import "lecture";
 @import "gallery";
 
 .body {
@@ -44,10 +44,14 @@
   }
 
   &__lecture {
-    // margin: 0 auto 316px;
+    margin-bottom: $marginBetween + 116px;
+
+    @media (max-width: 1170px) {
+      margin-bottom: $marginBetween / 2;
+    }
   }
 
   &__gallery {
-    // margin: 0 auto 200px;
+    margin-bottom: $marginBetween;
   }
 }
