add subscribe block

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,9 +8,12 @@
 @import "lection";
 @import "gallery";
 @import "slider";
+@import "subscribe";
+@import "form";
 
 body {
   font-family: "IBM Plex Sans", sans-serif;
+  font-size: 14px;
 }
 
 .container {
