gallery block done

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -40,18 +40,22 @@
 
 .main {
   &__actual {
-    margin-bottom: 60px;
+    margin-bottom: $marginBetween / 2;
   }
 
   &__lecture {
     margin-bottom: $marginBetween + 116px;
 
     @media (max-width: 1170px) {
-      margin-bottom: $marginBetween / 2;
+      margin-bottom: $marginBetween / 2 + 116px;
     }
   }
 
   &__gallery {
     margin-bottom: $marginBetween;
+
+    @media (max-width: 820px) {
+      margin-bottom: $marginBetween / 2;
+    }
   }
 }
