lecture and subscription

--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -6,9 +6,14 @@
   background-image: url("../images/Vector.png");
   background-position: center;
   background-repeat: no-repeat;
-
   @include MobileScreen {
     width: 50px;
     height: 50px;
   }
+}
+
+.button--sub {
+  background-color: $c-squareEvets;
+  background-image: url("../images/Vector1.png");
+
 }
