--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -11,4 +11,16 @@
   @include MobileScreen {
     padding: 0 20px;
   }
+
+  &__subscription {
+    margin-top: 200px;
+
+    @include MediumScreen {
+      margin-top: 129px;
+    }
+  
+    @include MobileScreen {
+      margin-top: 139px;
+    }
+  }
 }
