--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "_normalize";
 @import "_reset";
 @import "header";
 @import "menu";
@@ -14,19 +15,4 @@
 @import "lecture";
 @import "gallary";
 @import "slider";
-
-* {
-  box-sizing: border-box;
-}
-
-html {
-  font-family: "IBM Plex Sans", sans-serif;
-  background: #e5e5e5;
-  scroll-behavior: smooth;
-}
-
-body {
-  background-color: #fff;
-  max-width: 1920px;
-  margin: 0 auto;
-}
+@import "subscription";
