--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -3,6 +3,8 @@
   text-align: center;
   
   &__input {
+    position: relative;
+
     visibility: hidden;
     display: inline-block;
   }
@@ -10,6 +12,7 @@
   &__label {
     visibility: hidden;
     position: absolute;
+    margin-left: -17px;
     bottom: -30px;
     background-color: $c-noActive;
     width: 9px;
