--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 @import "slider";
 @import "subscribe";
 @import "form";
+@import "footer";
 
 body {
   font-family: "IBM Plex Sans", sans-serif;
