--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body,
@@ -9,9 +10,15 @@ h1,
 h2,
 a {
   margin: 0;
+  padding: 0;
 }
 
 button {
   padding: 0;
   border: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
