--- a/src/styles/exhibitions.scss
+++ b/src/styles/exhibitions.scss
@@ -1,45 +1,76 @@
 @import "utils";
 
 .exhibitions {
-  padding: 160px 0;
+  padding: 80px 0;
   position: relative;
-
-  &__image {
-    position: absolute;
-  }
-
-  &__image--1 {
-    top: 60px;
-  }
-
-  &__image--2 {
-    right: 0;
-    top: 720px;
-  }
-  &__image--3 {
-    top: 1240px;
-  }
 
   &__title {
     @include title(48px, 58px, $colorBlack);
     margin-left: $column * 3;
-    margin-bottom: $column;
+    margin-bottom: -120px;
+
+    @media (max-width: 970px) {
+      margin-bottom: $gridGap;
+      margin-left: $column;
+    }
+
+    @media (max-width: 650px) {
+      margin-left: 0;
+    }
+
+    @media (max-width: 550px) {
+      font-size: 42px;
+    }
+
   }
 
   &__item {
-    max-width: $column * 5;
-    padding: 20px 20px 20px $column;
-    margin-bottom: 180px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    @media (max-width: 1000px) {
+      padding-bottom: 40px;
+    }
   }
 
-  &__item--left {
-    margin-left: $column * 6;
+  &__image-wrap {
+    max-width: 50%;
+
+    @media (max-width: 970px) {
+      max-width: 35%;
+    }
+    @media (max-width: 550px) {
+      display: none;
+    }
+
+  }
+
+  &__image {
+    width: 100%;
+    height: auto;
+  }
+
+  &__image-wrap--odd {
+    margin-left: -($gridGap*2);
+  }
+
+  &__image-wrap--even {
+    margin-right: -($gridGap*2);
+  }
+
+  &__card {
+    width: $column * 5;
+    //padding: 0 20px;
   }
 
   &__date-limited {
     @include title(48px, 58px, $colorMainOrange);
     margin-left: -$column;
     margin-bottom: 20px;
+    @media (max-width: 970px) {
+      margin: 0;
+    }
+
   }
 
   &__date {
