--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "typography";
 @import "reset";
 @import "header";
+@import "nav";
 @import "exhibitions";
 @import "events";
 @import "visit.scss";
@@ -30,6 +31,11 @@ body {
   background-color: $colorMainOrange;
   text-align: center;
   color: $colorLightGray;
+}
+
+.button--inactive {
+  background-color: $colorMainGreen;
+  border: 1px solid $colorLightGray;
 }
 
 .section-bottom {
