--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -59,8 +59,21 @@
 
   &__photos {
     overflow: hidden;
-    // flex-grow: 1;
     flex-shrink: 1;
+    transition-duration: 1s;
+
+    &:hover {
+      border-radius: 60px;
+      box-shadow: 0 0 30px rgba(#000, 0.8);
+    }
+  }
+
+  &__photo {
+    transition-duration: 1s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
 }
