--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -2,7 +2,6 @@
   max-width: 1920px;
   margin: 100px auto 50px;
   position: relative;
-  z-index: -1;
 
   &__photo {
     width: 100%;
@@ -40,8 +39,8 @@
     padding-left: 35px;
     outline: none;
     font-family: "Montserrat", sans-serif;
-    font-weight: bold;
-    font-size: 16px;
+    font-size: 14px;
+    position: relative;
   }
 
   &__button {
@@ -54,6 +53,12 @@
     background-image: url("../images/right.svg");
     background-position: center;
     background-repeat: no-repeat;
+    transition-duration: 0.5s;
+
+    &:hover {
+      border-radius: 50%;
+      box-shadow: 0 0 10px rgba(#f14a27, 0.8);
+    }
   }
 
 }
