--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,4 +1,5 @@
 .header {
+
   &__content {
     padding-left: 20px;
     max-width: 1920px;
@@ -13,17 +14,16 @@
     
     &--menu {
       display: flex;
-      align-items: flex-end;
+      flex-direction: column;
+      justify-content: space-between;
     }
   }
 
   &__title {
     justify-self: end;
     position: relative;
-    z-index: -1;
     top: 235px;
     left: 140px;
-
   }
 
   &__text {
@@ -44,23 +44,25 @@
       padding: 15px 0 0 51px;
       font-weight: 700;
     }
+  }
 
-    &--nav {
-      font-size: 30px;
-      margin-bottom: 10px;
-      text-align: center;
-      font-weight: 700;
+  &__logo {
+    width: 53px;
+    height: 62px;
+    transition-duration: 0.8s;
+
+    &:hover {
+      transform: rotate(360deg) scale(1.2);
     }
   }
 
   &__photo {
     position: relative;
-    z-index: -2;
+    z-index: -1;
     background-image: url(../images/header_photo.png);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
-    width: 100%;
+    background-position: bottom left;
   }
 
   &__button {
@@ -68,17 +70,25 @@
     height: 70px;
     border: 2px solid #1a5a4c;
     font-size: 16px;
-    line-height: 70px;
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 500;
     outline: none;
-    cursor: pointer;
     position: relative;
+    cursor: pointer;
+
+    transition-duration: 0.4s;
+
+    &:hover {
+      background-color: #1a5a4c;
+      box-shadow: 30px 0 50px rgba(#1a5a4c, 0.8);
+      color: #fff;
+    }
 
     &::after {
       content: ">";
-      color: white;
       position: absolute;
+      color: white;
+      line-height: 70px;
       top: -2px;
       right: -70px;
       width: 70px;
@@ -89,8 +99,8 @@
   }
 
   &__menu {
-    position: fixed;
-    padding-top: 55px;
+    position: relative;
+    padding-top: 35px;
 
     & input {
       position: relative;
@@ -98,8 +108,7 @@
       height: 30px;
       cursor: pointer;
       opacity: 0;
-      margin-left: 20px;
-      z-index: 3;
+      z-index: 100;
     }
 
     & span {
@@ -110,11 +119,10 @@
       margin-bottom: 5px;
       background: #0f0e08;
       position: relative;
-      margin-left: 20px;
       top: -31px;
       transition: all 0.6s ease;
       transform-origin: 0 0;
-      z-index: 2;
+      z-index: 99;
     }
 
     & input:checked {
@@ -134,7 +142,7 @@
     }
 
     & input:not(:checked) ~ nav {
-      transform: translate(-100%, 0);
+      transform: translate(0, -100%);
     }
 
   }
@@ -165,19 +173,27 @@
 @media screen and (max-width: 1200px) {
   .header {
     &__photo {
-      background-position: left;
+      width: 655px;
+      background-image: url(../images/Header2.png);
+      background-position: center;
       transition-duration: 1s;
     }
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
   .header {
     transition-duration: 1s;
 
     &__position {
       grid-template-columns: 0 266px 1fr;
       grid-template-rows: 384px;
+      transition-duration: 1s;
+    }
+
+    &__photo {
+      background-image: url(../images/Header2.png);
+      background-position: left;
       transition-duration: 1s;
     }
 
@@ -203,7 +219,7 @@
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
   .header {
 
     &__content {
@@ -219,6 +235,11 @@
     &__photo {
       height: 320px;
       width: 100%;
+    }
+
+    &__logo {
+      width: 40px;
+      height: 40px;
     }
 
     &__title {
@@ -247,17 +268,18 @@
     }
 
     &__menu {
-      padding-top: 30px;
+      position: absolute;
+      left: 20px;
     }
 
     &__button {
       margin-top: 20px;
       height: 50px;
-      line-height: 50px;
       width: calc(100% - 70px);
 
       &::after {
         height: 50px;
+        line-height: 50px;
       }
     }
   }
