--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,18 +1,24 @@
 .nav {
   position: absolute;
-  z-index: 1;
-  top: 30px;
-  left: -10px;
+  top: 0;
+  left: -20px;
   background-color: white;
-  width: 300px;
-  height: 500px;
-  border-radius: 20px;
+  max-width: 1920px;
+  width: 100vw;
+  height: 90px;
+  border-radius: 0 0 30px 30px;
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1);
-  padding: 20px 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 90px;
 
   &__list {
     list-style: none;
     padding: 0;
+    display: flex;
+    align-self: flex-end;
+    column-gap: 50px;
   }
 
   &__item {
@@ -22,10 +28,10 @@
   &__link {
     text-decoration: none;
     padding-bottom: 5px;
-    font-size: 18px;
-    color: #1a5a4c;
+    font-size: 14px;
+    color: #0f0e08;
     font-family: "Montserrat", sans-serif;
-    font-weight: 700;
+    font-weight: 400;
 
     background-image: linear-gradient(black, black);
     background-position: 0% 100%;
@@ -39,14 +45,10 @@
     }
   }
 
-  &__icons {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 25px;
-  }
-
   &__icon {
+    margin-top: 6px;
     transition-duration: 0.4s;
+    cursor: pointer;
 
     &:hover {
       transform: scale(1.4);
@@ -54,8 +56,32 @@
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 1300px) {
   .nav {
-    top: 10px;
+    &__list {
+      column-gap: 20px;
+    }
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .nav {
+    height: 350px;
+    z-index: 1;
+    &__list {
+      flex-direction: column;
+    }
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .nav {
+    padding: 0 20px;
+    height: 350px;
+
+    &__list {
+      flex-direction: column;
+    }
+
   }
 }
