--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -31,6 +31,17 @@ body {
   background-color: $colorMainOrange;
   text-align: center;
   color: $colorLightGray;
+  position: relative;
+  transition: all 0.5s ease;
+
+  @media (max-width: 970px) {
+    margin-top: 40px;
+  }
+
+}
+
+.button:hover {
+  transform: scale(1.05);
 }
 
 .button--inactive {
