--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -8,10 +8,17 @@
     @include title(48px, 58px, $colorBlack);
     margin-left: $column * 3;
     margin-bottom: 36px;
+    @media (max-width: 970px) {
+      margin-left: $column;
+    }
   }
 
   &__block {
     margin-bottom: 10px;
+
+    @media (max-width: 970px) {
+      margin-bottom: 20px;
+    }
   }
 
 }
@@ -20,6 +27,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 0 $gridGap;
 
   &__info {
     display: flex;
@@ -57,5 +65,18 @@
 
   &__text {
     @include smallText($colorBlack);
+  }
+
+  &__image-wrap {
+    max-width: 30%;
+
+    @media (max-width: 970px) {
+      display: none;
+    }
+  }
+
+  &__image {
+    width: 100%;
+    height: auto;
   }
 }
