--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -1,10 +1,10 @@
 .events {
   display: flex;
   flex-direction: column;
+  max-width: 1570px;
+  margin: 0 auto;
 
   &__title {
-    grid-row-start: 1;
-    grid-column: 1 / 18;
     padding-bottom: 10px;
   }
 
@@ -13,12 +13,13 @@
 
     &--left-image {
       grid-row-start: 2;
-      grid-column: 1 / 17;
+      grid-column: 1 / 3;
     }
 
     &--right-desc {
       grid-row-start: 2;
-      grid-column: 11 / 15;
+      grid-column-start: 3;
+      
     }
   }
 
@@ -27,12 +28,54 @@
 
     &--right-image {
       grid-row-start: 1;
-      grid-column: 8 / 17;
+      grid-column: 2 / 4;
     }
 
     &--left-desc {
       grid-row-start: 1;
-      grid-column: 3 / 7;
+      grid-column-start: 1;
+      justify-self: end;
+    }
+  }
+}
+
+@media screen and (max-width: 1270px) {
+  .events {
+    max-width: 700px;
+
+    &__title {
+      padding-bottom: 50px;
+    }
+
+    &__event-card-1 {
+      margin: 0 0 50px;
+
+      &--left-image {
+        grid-row: 1;
+        grid-column: 1 / span 6;
+        margin-bottom: 30px;
+      }
+
+      &--right-desc {
+        grid-row-start: 2;
+        grid-column-start: 1;
+        
+      }
+    }
+
+    &__event-card-2 {
+      margin: 0 0 50px;
+
+      &--right-image {
+        grid-row-start: 1;
+        grid-column: 1 / span 6;
+        margin-bottom: 30px;
+      }
+
+      &--left-desc {
+        grid-row-start: 2;
+        grid-column-start: 1;
+      }
     }
   }
 }
