--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -1,6 +1,12 @@
 .gallery {
-  max-width: 1770px;
-  margin: 0 auto 200px;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: minmax(auto, 1570px);
+  margin-bottom: 200px;
+
+  &__dots {
+    display: none;
+  }
 
   &__title {
     padding-bottom: 60px;
@@ -8,10 +14,9 @@
 
   &__items {
     display: grid;
-    grid-template-columns: repeat(3, 370px);
+    grid-template-columns: 370px 370px 370px 370px;
     grid-template-rows: 600px 360px;
     gap: 30px;
-    justify-content: center;
   }
 
   &__item {
@@ -25,5 +30,56 @@
 
   &__item--big {
     grid-column: span 2;
+  }
+}
+
+@media screen and (max-width: 1670px) {
+  .gallery {
+    &__items {
+      justify-self: center;
+      grid-template-columns: 370px 370px 370px;
+    }
+
+    &__item {
+      &:nth-child(3n) {
+        display: none;
+      }
+    }
+
+    &__title {
+      padding-bottom: 60px;
+    }
+  }
+}
+
+@media screen and (max-width: 1270px) {
+  .gallery {
+    grid-template-columns: minmax(auto, 768px);
+    margin-bottom: 90px;
+
+    &__item {
+      &:nth-child(-2n + 2) {
+        display: none;
+      }
+    }
+
+    &__items {
+      justify-self: center;
+      grid-template-columns: repeat(2, 340px);
+      grid-auto-flow: column;
+      grid-template-rows: 543px;
+      gap: 0 20px;
+      overflow: hidden;
+    }
+
+    &__item--big {
+      grid-column: span 1;
+    }
+
+    &__dots {
+      display: block;
+      margin-top: 30px;
+      justify-self: center;
+    }
   }
 }
