--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,22 +16,23 @@ html {
   font-family: "Roboto", sans-serif;
 }
 
-.wrapper {
-  min-height: 100%;
-  display: grid;
-  grid-template: minmax(655px, auto) 1fr minmax(457px, auto) / 1fr;
-  grid-template-areas: "header" "main" "footer";
-  justify-content: center;
-}
+// .wrapper {
+//   min-height: 100%;
+//   display: grid;
+//   grid-template: minmax(auto, 655px) 1fr minmax(auto, 457px) / 1fr;
+//   grid-template-areas: "header" "main" "footer";
+// }
 
-.header {
-  grid-area: header;
-}
+// .header {
+//   grid-area: header;
+//   padding-left: 40px;
+// }
 
-.main {
-  grid-area: main;
-}
+// .main {
+//   grid-area: main;
+//   margin: 0 40px;
+// }
 
-.footer {
-  grid-area: footer;
-}
+// .footer {
+//   grid-area: footer;
+// }
