--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -4,9 +4,10 @@
   align-items: center;
   justify-content: center;
   height: 550px;
+  max-width: 1920px;
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
     url(../images/subs.png)
-    center / cover
+    center / 175%
     no-repeat;
 
   &__title {
