--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -9,6 +9,17 @@
   -webkit-text-fill-color: transparent;
 }
 
+@media screen and (max-width: 1270px) {
+  %h1 {
+    font-size: 55px;
+  }
+}
+
+// .header__name-transparent {
+//   -webkit-text-stroke: unset;
+//   -webkit-text-fill-color: unset;
+// }
+
 %h2 {
   font-family: "Montserrat", sans-serif;
   font-size: 48px;
