--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,5 +1,7 @@
 .footer {
   display: grid;
+  margin: 0 auto;
+  max-width: 1570px;
   grid-template-columns: repeat(16, 1fr);
   grid-template-rows: 50px 1fr max-content 1fr 70px;
   gap: 0 30px;
@@ -22,6 +24,7 @@
   &__copyright {
     grid-column: 1 / 4;
     grid-row-start: 5;
+    align-self: center;
     font-size: 12px;
     font-weight: 300;
   }
@@ -75,6 +78,70 @@
 
     &-link {
       color: #0f0e08;
+    }
+  }
+}
+
+@media screen and (max-width: 1500px) {
+  .footer {
+    max-width: 1170px;
+    grid-template-columns: repeat(12, 1fr);
+
+    &__contacts {
+      grid-column: 5 / 7;
+    }
+
+    &__nav-site {
+      grid-column: 8 / 10;
+    }
+
+    &__nav-general {
+      grid-column: 10 / 11;
+    }
+  }
+}
+
+@media screen and (max-width: 1270px) {
+  .footer {
+    max-width: 768px;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 5fr 4fr 1fr;
+    gap: 40px 20px;
+    margin: 30px auto;
+
+    &__contacts {
+      grid-column: 4 / 6;
+      grid-row: 1;
+    }
+
+    &__nav-site {
+      grid-column: 2 / 4;
+      grid-row: 2;
+    }
+
+    &__nav-general {
+      grid-column: 4;
+      grid-row: 2;
+    }
+
+    &__schedule {
+      grid-column: 2 / 4;
+      grid-row: 1;
+    }
+
+    &__logo {
+      grid-column-start: 1;
+      grid-row-start: 1;
+    }
+  
+    &__media {
+      grid-column-start: 1;
+      grid-row-start: 2;
+    }
+
+    &__copyright {
+      grid-column: 1 / 3;
+      grid-row-start: 3;
     }
   }
 }
