--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,16 +1,22 @@
 .header {
   display: grid;
-  grid-template: 1fr / 1fr minmax(auto, 1570px) 1fr;
-  margin-bottom: 150px;
+  justify-content: end;
+  grid-template-columns: 500px minmax(700px, 1245px);
+  grid-template-rows: 100px 555px;
+  max-width: 1920px;
+  height: 655px;
+  margin: 0 auto 150px;
+  padding-left: 40px;
   
   &__container {
-    grid-column-start: 2;
+    grid-column: 1;
+    grid-row: 1 / span 2;
     display: grid;
-    grid-template: 1fr 1fr 2fr 1fr 1fr / 2fr 3fr 11fr;
+    grid-template: 1fr 1fr 2fr 1fr 1fr / 200px 300px;
   }
 
   &__logo {
-    grid-column: 1 / span 3;
+    grid-column: 1 / span 2;
     grid-row: 1;
     align-self: center;
     justify-self: center;
@@ -51,14 +57,14 @@
   }
 
   &__name {
-    grid-column: 2 / span 4;
+    grid-column: 2;
     grid-row-start: 3;
     align-self: center;
     z-index: 1;
   }
 
   &__tickets {
-    grid-column: 2 / span 4;
+    grid-column: 2;
     grid-row-start: 4;
     align-self: center;
     height: 70px;
@@ -85,13 +91,74 @@
   }
 
   &__image {
-    grid-column-start: 3;
-    grid-row: 1 / span 7;
+    grid-column: 2;
+    grid-row: 1;
+    justify-self: start;
+    height: 655px;
+    overflow: hidden;
 
     & img {
-      object-fit: cover;
       width: 100%;
       height: 100%;
+      object-fit: none;
+      object-position: left;
+    }
+  }
+}
+
+@media screen and (max-width: 1270px) {
+  .header {
+    max-width: 768px;
+    grid-template-columns: 230px minmax(320px, 505px);
+    grid-template-rows: 100px 284px;
+    height: 384px;
+    // margin: 0 auto 90px;
+    padding: 0;
+
+    &__events {
+      display: none;
+    }
+
+    &__container {
+      grid-column: 1;
+      grid-row: 1 / span 2;
+      display: grid;
+      grid-template: 100px 1fr 1fr / 25px 205px;
+    }
+  
+    &__logo {
+      grid-column: 1 / span 2;
+      grid-row: 1;
+      align-self: center;
+      justify-self: center;
+      z-index: 1;
+    }
+  
+    &__burger {
+      grid-column-start: 1;
+      grid-row-start: 1;
+      align-self: center;
+    }
+
+    &__name {
+      grid-column: 1 / span 2;
+      grid-row: 2;
+    }
+
+    &__tickets {
+      grid-column: 1 / span 2;
+      grid-row: 3;
+    }
+
+    &__image {
+      grid-column: 2;
+      grid-row: 1 / span 2;
+      justify-self: start;
+      height: 384px;
+  
+      & img {
+        object-fit: cover;
+      }
     }
   }
 }
