--- a/src/styles/main-event.scss
+++ b/src/styles/main-event.scss
@@ -1,15 +1,14 @@
 .main-event {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 100%;
   grid-template-rows: auto 102px;
   justify-items: center;
   margin: 50px 0 100px;
 
   &__image {
-    max-width: 100%;
 
     & img {
-      object-fit: cover;
+      max-width: 100%;
     }
   }
 
