news footer adaptive

--- a/src/styles/digest.scss
+++ b/src/styles/digest.scss
@@ -8,16 +8,35 @@
     @include title(48px, 58px, $colorLightGray);
     margin-bottom: 40px;
     padding-top: 160px;
+
+    @media (max-width: 1110px) {
+      padding-top: 110px;
+    }
+
+    @media (max-width: 690px) {
+      padding-top: 80px;
+    }
+
+    @media (max-width: 460px) {
+      font-size: 40px;
+      padding-top: 60px;
+    }
   }
 
   &__content {
     display: flex;
     gap: 0 $column;
     align-items: flex-end;
+
+    @media (max-width: 1110px) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
   }
 
   &__text {
     max-width: $column * 6;
+    margin-bottom: 30px;
 
     @include smallText($colorLightGray);
   }
@@ -33,6 +52,10 @@
     outline: none;
     border-bottom: 1px solid $colorLightGray;
     @include smallText($colorLightGray);
+
+    @media (max-width: 420px) {
+      width: 80%;
+    }
   }
 
   &__input::placeholder {
@@ -52,5 +75,10 @@
     background-color: $colorMainOrange;
     background-size: contain;
     cursor: pointer;
+
+    @media (max-width: 4200px) {
+      bottom: -40px;
+      right: -20px;
+    }
   }
 }
