--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -11,6 +11,10 @@
     @media (max-width: 970px) {
       margin-left: $column;
     }
+    @media (max-width: 560px) {
+      margin-left: 0;
+      text-align: center;
+    }
   }
 
   &__block {
@@ -39,6 +43,9 @@
   &__date {
     padding-right: $gridGap;
     width: $column * 2;
+    @media (max-width: 560px) {
+      //width: auto;
+    }
 
   }
   &__day {
@@ -46,6 +53,12 @@
     -webkit-text-stroke: 1px $colorMainOrange;
     padding-right: $column / 2;
     margin-bottom: 10px;
+
+    @media (max-width: 560px) {
+      padding-right: 0;
+      font-size: 32px;
+      line-height: 32px;
+    }
   }
 
   &__time {
