--- a/src/styles/exhibitions.scss
+++ b/src/styles/exhibitions.scss
@@ -50,13 +50,13 @@
     height: auto;
   }
 
-  &__image-wrap--odd {
-    margin-left: -($gridGap*2);
-  }
-
-  &__image-wrap--even {
-    margin-right: -($gridGap*2);
-  }
+  //&__image-wrap--odd {
+  //  margin-left: -($gridGap*2);
+  //}
+  //
+  //&__image-wrap--even {
+  //  margin-right: -($gridGap*2);
+  //}
 
   &__card {
     width: $column * 5;
