--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -3,7 +3,14 @@
 .header {
   height: 800px;
   background-color: $colorMainGreen;
-  //position: relative;
+
+  @media (max-width: 729px) {
+    height: 620px;
+  }
+
+  @media (max-width: 460px) {
+    height: 580px;
+  }
 
   &__top {
     height: 80px;
@@ -36,6 +43,11 @@
     position: relative;
     height: 720px;
     padding-top: 110px;
+
+    @media (max-width: 729px) {
+      //height: 600px;
+      padding-top: 60px;
+    }
   }
 
   &__image-wrap {
@@ -73,16 +85,33 @@
   &__title,
   &__title-second {
     @include title(96px, 110px, $colorLightGray);
+
+    @media (max-width: 729px) {
+      font-size: 70px;
+      line-height: 96px;
+    }
+    @media (max-width: 460px) {
+      font-size: 42px;
+      line-height: 70px;
+    }
   }
 
   &__title-second,
   &__description,
   &__button {
     margin-left: $column;
+
+    @media (max-width: 729px) {
+      margin-left: 0;
+    }
   }
 
   &__title-second {
     margin-bottom: 40px;
+
+    @media (max-width: 729px) {
+      margin-bottom: 30px;
+    }
   }
 
   &__bottom {
