--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -8,6 +8,18 @@
   &__content {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    gap: 0 $gridGap;
+
+    @media (max-width: 920px) {
+      grid-template-columns: repeat(2, 1fr);
+      grid-auto-flow: row;
+    }
+
+    @media (max-width: 570px) {
+      display: flex;
+      flex-direction: column;
+
+    }
   }
 
   &__item {
@@ -17,6 +29,10 @@
   &__title {
     @include title(24px, 30px, $colorLightGray);
     margin-bottom: 40px;
+
+    @media (max-width: 570px) {
+      margin-bottom: 20px;
+    }
   }
 
   &__sm {
@@ -40,9 +56,12 @@
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-    width: 280px;
+    width: 100%;
     opacity: 0.6;
     margin: 0 auto;
 
+    @media (max-width: 570px) {
+      padding: 30px 0;
+    }
   }
 }
