--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -46,6 +46,14 @@
     @media (max-width: 1100px) {
       background: $colorMainGreen;
     }
+    @media (max-width: 729px) {
+      height: 540px;
+    }
+
+    @media (max-width: 460px) {
+      height: 500px;
+
+    }
   }
 
   &__content--open {
@@ -65,21 +73,52 @@
 
   &__item {
     margin-bottom: 60px;
+    @media (max-width: 729px) {
+      margin-bottom: 30px;
+    }
+
+    @media (max-width: 420px) {
+      margin-bottom: 20px;
+    }
   }
 
   &__link {
     @include title(48px, 58px, $colorLightGray);
+
+    @media (max-width: 490px) {
+      font-size: 40px;
+      line-height: 40px;
+    }
+
+    @media (max-width: 420px) {
+      font-size: 32px;
+      line-height: 32px;
+    }
   }
 
   &__buttons {
     display: flex;
     gap: $gridGap;
+
+    @media (max-width: 420px) {
+      flex-direction: column;
+      align-items: center;
+      margin-top: 10px;
+    }
   }
+
 }
 
 .about {
   display: flex;
   margin-bottom: 80px;
+  @media (max-width: 729px) {
+    margin-bottom: 40px;
+  }
+
+  @media (max-width: 480px) {
+    flex-direction: column;
+  }
 
   &__item {
     min-width: $column * 2;
