--- a/src/styles/news.scss
+++ b/src/styles/news.scss
@@ -3,28 +3,53 @@
 .news {
   padding: 120px 0 100px;
 
+  @media (max-width: 460px) {
+    padding: 60px 0;
+  }
+
   &__title {
     @include title(48px, 58px, $colorBlack);
     margin-bottom: 60px;
     margin-left: $column * 2;
+
+    @media (max-width: 720px) {
+      margin-left: 0;
+      text-align: center;
+    }
   }
 
   &__gallery {
     display: grid;
-    grid-template-columns: repeat(3, auto);
+    grid-template-columns: repeat(3, 1fr);
     gap: $gridGap;
     margin-bottom: $column;
-  }
 
+    @media (max-width: 460px) {
+      margin-bottom: 50px;
+    }
+
+    @media (max-width: 720px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+  }
 }
 
 .news-card {
   max-width: 370px;
   max-height: 550px;
 
-  &__picture-wrap {
-    width: 370px;
-    height: 370px;
+  &__image-wrap {
+    padding: 0;
+    max-width: 370px;
+  }
+
+  &__image {
+    display: block;
+    width: 100%;
+    height: auto;
   }
 
   &__date {
